--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@hookform/error-message": "^2.0.1",
     "@mui/material": "^5.11.11",
     "@mui/styles": "^5.11.11",
     "@types/node": "18.14.5",
